fixed slider visibility bug

--- a/public/style.css
+++ b/public/style.css
@@ -222,11 +222,8 @@
     left: 2px;
     bottom: 2.5px;
     background-color: white;
-    transition-behavior: normal;
-    transition-duration: 0.4s;
-    transition-timing-function: ease;
-    transition-delay: 0s;
-    transition-property: left;
+    -webkit-transition: .4s;
+    transition: .4s;
   }
   
   input:checked + .slider {
